:adhesive_bandage: fix(ui): checkboxes spacing (#40)

--- a/starterOnly/static/css/modal.css
+++ b/starterOnly/static/css/modal.css
@@ -260,6 +260,9 @@ input[data-error]::after {
   font-size: 12px;
   font-weight: normal;
 }
+.checkbox2-label {
+    margin-top: 10px;
+}
 .checkbox-label .checkbox-icon,
 .checkbox2-label .checkbox-icon {
   display: block;
